--- a/package.json
+++ b/package.json
@@ -37,29 +37,30 @@
     "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.3.1",
-    "autoprefixer": "^9.4.6",
-    "babel-loader": "^8.0.5",
-    "clean-webpack-plugin": "^1.0.1",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "@fortawesome/fontawesome-free": "^5.8.2",
+    "autoprefixer": "^9.5.1",
+    "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^2.0.2",
     "cross-env": "^5.2.0",
-    "css-loader": "^2.1.0",
-    "cssnano": "^4.1.8",
-    "eslint": "^5.12.1",
+    "css-loader": "^2.1.1",
+    "cssnano": "^4.1.10",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-import": "^2.15.0",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-import": "^2.17.3",
     "file-loader": "^3.0.1",
-    "glob": "^7.1.3",
+    "glob": "^7.1.4",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^4.0.0-beta.5",
     "http-server": "^0.11.1",
     "image-webpack-loader": "^4.6.0",
     "less": "^3.9.0",
-    "less-loader": "^4.1.0",
-    "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^4.11.0",
+    "less-loader": "^5.0.0",
+    "mini-css-extract-plugin": "^0.7.0",
+    "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-sass": "^0.3.5",
@@ -67,26 +68,27 @@
     "sass-loader": "^7.1.0",
     "sitemap-webpack-plugin": "^0.6.0",
     "style-loader": "^0.23.1",
-    "stylelint": "^9.10.1",
-    "stylelint-config-standard": "^18.2.0",
+    "stylelint": "^10.0.1",
+    "stylelint-config-standard": "^18.3.0",
     "stylelint-webpack-plugin": "^0.10.5",
-    "webapp-webpack-plugin": "^2.6.0",
-    "webpack": "^4.29.0",
-    "webpack-cli": "^3.2.1",
+    "webapp-webpack-plugin": "^2.7.0",
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.2",
     "webpack-merge": "^4.2.1",
-    "webpackbar": "^3.1.5"
+    "webpackbar": "^3.2.0"
   },
   "dependencies": {
     "chalk": "^2.4.2",
     "clear": "^0.1.0",
     "dploy": "^1.2.0",
     "enquirer": "^2.3.0",
-    "figlet": "^1.2.1",
-    "jquery": "^3.3.1",
+    "figlet": "^1.2.3",
+    "jquery": "^3.4.1",
+    "minimatch": "^3.0.4",
     "moment": "^2.24.0",
     "normalize.css": "^8.0.1",
     "reset-css": "^4.0.1",
-    "sanitize.css": "^8.0.0",
-    "webpack-dev-server": "^3.1.10"
+    "sanitize.css": "^9.0.0",
+    "webpack-dev-server": "^3.4.1"
   }
 }
