--- a/images/favicons/manifest.json
+++ b/images/favicons/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Time-to-decimal",
-  "short_name": "Time-to-decimal",
-  "description": "Mini web app that calculates time or duration to scientific decimal format",
+  "name": "Static Site Boilerplate",
+  "short_name": "Static Site Boilerplate",
+  "description": "A modern boilerplate for static website development",
   "dir": "auto",
   "lang": "en-US",
   "display": "standalone",
